Fix immediately visible collapses

--- a/src/theme/components/collapse.scss
+++ b/src/theme/components/collapse.scss
@@ -2,7 +2,9 @@
 .collapse {
 	display: block;
 	--space-scale: 0;
+}
 
+.collapse_sized {
 	transition:
 		margin-block-start var(--layout-transition),
 		margin-block-end var(--layout-transition);
@@ -13,15 +15,17 @@
 }
 
 .collapse_view {
-	transition:
-		block-size var(--layout-transition),
-		margin var(--layout-transition);
-
 	block-size: 0px;
 	position: relative;
 	overflow: hidden;
 
-	.collapse_visible & {
+	.collapse_sized > & {
+		transition:
+			block-size var(--layout-transition),
+			margin var(--layout-transition);
+	}
+
+	.collapse_visible > & {
 		block-size: calc(var(--collapse-size) + var(--overflow-safe-area) * 2);
 		margin: calc(var(--overflow-safe-area) * -1);
 	}
@@ -33,9 +37,11 @@
 	top: 0;
 	left: 0;
 
-	transition:
-		top var(--layout-transition),
-		left var(--layout-transition);
+	.collapse_sized > * > & {
+		transition:
+			top var(--layout-transition),
+			left var(--layout-transition);
+	}
 
 	.collapse_visible & {
 		top: var(--overflow-safe-area);
